--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -4,7 +4,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th>Athlete Number</th>
+				<th>Athlete's Number</th>
 				<th>First Name</th>
 				<th>Last Name</th>
 				<th>Year of Birth</th>
