--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contentStyle">
 	<h1>2015 Meet Results</h1>
-<h1>Listing Results</h1>
+<h1>Individual Results</h1>
 
 <table>
   <thead>
