--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="contentStyle">  
 	
-	
+<h2>Athlete Added to Roster</h2>	
 <strong> Athlete Number:</strong>
   <%= @athlete. athleteNum %>
 <br />
