--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,39 @@
+<%= stylesheet_link_tag("welcome") %>
+
 <div class="contentStyle2">  
 	
 	
-<h1 class="k1">Welcome to The Ohio Rockets Track & Field Club</h1>
+<h1 class="k1">Welcome to The Ohio Rockets Track & Field Club</h1><br /<br />
 
+<div id="leftImageAlign"><%= image_tag("teamPic", :height => "45%", :width => "45%",:style => "float :left", :hspace=> "10"  ) %>
+	
+Welcome to the Ohio Rockets Track & Field website! The Ohio Rockets are based in Central Ohio and are celebrating our 5th 
+year of community service. We are dedicated to provide affordable training to local athletes who aspire to become better runners.
+The Ohio Rockets are dedicated to guiding you through the process to get qualified for the Jr. Olympics. Below is 
+	a quick explanation of what it takes to get to the Nationals.
+<h2 id="padTop">FAQs</h2><hr>	
+<h3>How do I qualify for the AAU Jr. Olympics?</h3>
+
+<br />1. Get your AAU Card and attend a AAU District Meet. If you finish in the top 16, you will advance to the AAU National Qualifer.
+
+<br />2. Attend the AAU National Qualifier. You can only compete in the events that you entered at the District Level.
+
+<br />3. So who advance to the AAU Jr Olympics from the National Qualifier?
+<br />To quote the 2015 AAU Handbook:
+
+<br />Advancement from Regional Qualifiers to the AAU Junior Olympic Games:
+
+    <br />Running Events
+        <br />The top six (6) athletes advance
+
+    <br />Field Events
+        <br />The top five (5) athletes advance
+
+    <br />Relays/Multi-Events
+        <br />The top four (4) teams/athletes advance
+
+<br /><br />Click Here to view the complete 2015 AAU Qualification Procedures.
+
+<br />4. Still have questions? Ask Coach Earl! 
 
 </div>
