--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,10 +2,39 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $font-stack:    Helvetica, sans-serif;
-$primary-color: #000000;
+$font-stack2:   Calibri, sans-serif;
+//colors
+$black: #000000;
+//alignment
+
 
 .k1 {
   font: 100% $font-stack;
-  color: $primary-color;
+  color: $black;
    font-size: 20px;
 }
+
+h4 {
+  margin: 0 0 0 0;
+  color: $black;
+  font-size: 14px;
+  text-align:left;
+  clear: both;
+}
+
+h2 {
+  color: $black;
+}
+
+//alignment
+#leftImageAlign {
+  display: block;
+  font: 100% $font-stack2;
+    text-align: justify;
+  font-size: 16px;
+}
+#padTop {
+  padding-top: 1cm;
+}
+
+
